add css and button listener

--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <title>Calculator</title>
     <link rel="stylesheet" type="text/css" href="calculator.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Poppins">
 </head>
 <body>
+    <h1>CALCULATOR</h1>
     <div class="wrapper">
         <div id="calc">
             <div class="display">
-
+                <span id="display">0</span>
             </div>
-            <div class="keys">
-                <button class="key">1</button>
-                <button class="key">2</button>
-                <button class="key">3</button>
-                <button class="key">4</button>
-                <button class="key">5</button>
-                <button class="key">6</button>
-                <button class="key">7</button>
-                <button class="key">8</button>
-                <button class="key">9</button>
-                <button class="key">0</button>
-                <button class="key" id="add">+</button>
-                <button class="key" id="subtract">-</button>
-                <button class="key" id="multiply">*</button>
-                <button class="key" id="divide">/</button>
-                <button class="key" id="eval">=</button>
-                <button class="key" id="clear">C</button>
+            <div class="keys-grid">
+                <button class="num">7</button>
+                <button class="num">8</button>
+                <button class="num">9</button>
+                <button class="key-op" id="add">+</button>
+                <button class="num">4</button>
+                <button class="num">5</button>
+                <button class="num">6</button>
+                <button class="key-op" id="subtract">-</button>
+                <button class="num">1</button>
+                <button class="num">2</button>
+                <button class="num">3</button>
+                <button class="key-op" id="multiply">*</button>
+                <button class="key-op" id="clear">C</button>
+                <button class="num">0</button>
+                <button class="key-op" id="eval">=</button>
+                <button class="key-op" id="divide">/</button>
             </div>
         </div>
     </div>
+    <script src="calculator.js"></script>
 </body>
 </html>
