--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="num">1</button>
                 <button class="num">2</button>
                 <button class="num">3</button>
-                <button class="key-op" id="multiply">*</button>
+                <button class="key-op" id="multiply">x</button>
                 <button class="key-op" id="clear">C</button>
                 <button class="num">0</button>
                 <button class="key-op" id="eval">=</button>
