add backspace, pos/neg, dec point and corresponding functions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <span id="display">0</span>
             </div>
             <div class="keys-grid">
+                <button class="key-op" id="clear-all">AC</button>
+                <button class="key-op" id="clear">C</button>
+                <button class="key-op" id="posNeg">+/-</button>
+                <button class="key-op" id="divide">/</button>
                 <button class="num">7</button>
                 <button class="num">8</button>
                 <button class="num">9</button>
@@ -27,10 +31,9 @@
                 <button class="num">2</button>
                 <button class="num">3</button>
                 <button class="key-op" id="multiply">x</button>
-                <button class="key-op" id="clear">C</button>
-                <button class="num">0</button>
+                <button class="num" id="zero">0</button>
+                <button class="num" id="decipoint">.</button>
                 <button class="key-op" id="eval">=</button>
-                <button class="key-op" id="divide">/</button>
             </div>
         </div>
     </div>
