--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div class="wrapper">
         <div id="calc">
             <div class="display">
+                <span id="history"></span>
                 <span id="display">0</span>
             </div>
             <div class="keys-grid">
                 <button class="key-op" id="clear-all">AC</button>
                 <button class="key-op" id="clear">C</button>
                 <button class="key-op" id="posNeg">+/-</button>
-                <button class="key-op" id="divide">/</button>
+                <button class="key-op" id="divide">÷</button>
                 <button class="num">7</button>
                 <button class="num">8</button>
                 <button class="num">9</button>
@@ -30,7 +31,7 @@
                 <button class="num">1</button>
                 <button class="num">2</button>
                 <button class="num">3</button>
-                <button class="key-op" id="multiply">x</button>
+                <button class="key-op" id="multiply">×</button>
                 <button class="num" id="zero">0</button>
                 <button class="num" id="decipoint">.</button>
                 <button class="key-op" id="eval">=</button>
